--- a/.gitignore
+++ b/.gitignore
@@ -190,6 +190,7 @@ wp-config.php
 
 # Example plugin
 /wp-content/plugins/hello.php
+/wp-content/plugins/advanced-custom-fields-pro/
 
 # Uploads
 /wp-content/uploads/
