added class- prefix

--- a/.gitignore
+++ b/.gitignore
@@ -187,6 +187,7 @@ wp-config.php
 
 # Example themes
 /wp-content/themes/twenty*/
+/wp-content/themes/university-animal-clinic/vendor/
 
 # Example plugin
 /wp-content/plugins/hello.php
