--- a/wp-content/themes/university-animal-clinic/composer.json
+++ b/wp-content/themes/university-animal-clinic/composer.json
@@ -15,7 +15,9 @@
         }
     ],
     "require": {
-        "php": ">=5.6"
+        "php": ">=5.6",
+        "wp-coding-standards/wpcs": "^2.3",
+        "phpcompatibility/phpcompatibility-wp": "^2.1"
     },
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
