--- a/wp-content/themes/university-animal-clinic/phpcs.xml.dist
+++ b/wp-content/themes/university-animal-clinic/phpcs.xml.dist
@@ -16,6 +16,12 @@
 	#############################################################################
 	-->
 
+	<!--
+	Prevent errors caused by WordPress Coding Standards not supporting PHP 8.0+.
+	See https://github.com/WordPress/WordPress-Coding-Standards/issues/2035
+	-->
+	<ini name="error_reporting" value="E_ALL &#38; ~E_DEPRECATED" />
+
 	<!-- Pass some flags to PHPCS:
 		 p flag: Show progress of the run.
 		 s flag: Show sniff codes in all reports.
@@ -61,7 +67,7 @@
 		 Multiple valid text domains can be provided as a comma-delimited list. -->
 	<rule ref="WordPress.WP.I18n">
 		<properties>
-			<property name="text_domain" type="array" value="_s"/>
+			<property name="text_domain" type="array" value="university-animal-clinic"/>
 		</properties>
 	</rule>
 
@@ -106,5 +112,7 @@
 
 	<config name="testVersion" value="5.6-"/>
 	<rule ref="PHPCompatibilityWP"/>
+
+	<exclude-pattern>/build/*.asset.php</exclude-pattern>
 
 </ruleset>
