--- a/.gitignore
+++ b/.gitignore
@@ -133,6 +133,8 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode/
 .vscode-test
+.DS_Store
+js/.DS_Store
 
 # yarn v2
 .yarn/cache
